--- a/world/powerdns/PKGBUILD
+++ b/world/powerdns/PKGBUILD
@@ -1,13 +1,14 @@
-# Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
-# Maintainer: Remi Gacogne <rgacogne[at]archlinux[dot]org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Contributor: Remi Gacogne <rgacogne[at]archlinux[dot]org>
 # Contributor: Alexander Rødseth <rodseth@gmail.com>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 # Contributor: Kevin Mihelich <kevin@archlinuxarm.org>
 # Contributor: Pieter Lexis <pieter[dot]lexis[at]powerdns[dot]com>
 
 pkgname=powerdns
-pkgver=4.9.4
-pkgrel=2
+pkgver=4.9.5
+pkgrel=1
 pkgdesc='Authoritative DNS server'
 url='https://www.powerdns.com/'
 arch=('x86_64')
@@ -30,7 +31,7 @@ backup=('etc/powerdns/pdns.conf')
 source=(https://downloads.powerdns.com/releases/pdns-${pkgver}.tar.bz2{,.asc}
         sysusers.conf
         https://github.com/PowerDNS/pdns/commit/23dd0603.patch)
-sha512sums=('fe597a84443bef2c47fdc8302b0fc3e809a48012cec40c4fafb79196eb13be547846d3bd088a93e3bac31bec94bed904b128afc9b8effd78c63c21178f0b2b1a'
+sha512sums=('ac1682b0616391240aa3dc618ea93855899987f2baa46546e6592a55fc0a83da1f1e2c08109d847a560e1a0c3106f7749935d0b152992ce85da715bb842d8dad'
             'SKIP'
             'c18fc317082b93d52e59526af2df0f1b45cc37622526cc727cac9e6d73dc343ab3d33ad6b5365b30e079650f1c220096f7baf2f750bf1a558d89c144fbc583ac'
             '34e320d6696950bb12b3ca46a7b1728d4f3c5b0d243fb473ae99caa5ebff078665b4d82caafb8c9582bc770bd24fff3143c0273efebcee5314eab45f9617b0af')
