--- a/world/fluidsynth/.artixlinux/pkgbase.yaml
+++ b/world/fluidsynth/.artixlinux/pkgbase.yaml
@@ -1,14 +1,7 @@
 ---
-pkgbase:
-  name: fluidsynth
-  version: 2.4.5-3
-  arch:
-    - x86_64
-  pkgname:
-    - fluidsynth
 actions:
   addRepo: world
-  removeRepo: world-goblins
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.4.5-3
+    version: 2.4.6-1
     packages:
-      - fluidsynth-2.4.5-3-x86_64.pkg.tar.zst
+      - fluidsynth-2.4.6-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
