--- a/world/libxkbcommon/.artixlinux/pkgbase.yaml
+++ b/world/libxkbcommon/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: libxkbcommon
-  version: 1.9.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - libxkbcommon
-    - libxkbcommon-x11
-    - libxkbcommon-doc
 actions:
   addRepo: world
   removeRepo: null
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.9.1-1
+    version: 1.9.2-1
     packages:
-      - libxkbcommon-1.9.1-1-x86_64.pkg.tar.zst
-      - libxkbcommon-x11-1.9.1-1-x86_64.pkg.tar.zst
-      - libxkbcommon-doc-1.9.1-1-x86_64.pkg.tar.zst
+      - libxkbcommon-1.9.2-1-x86_64.pkg.tar.zst
+      - libxkbcommon-x11-1.9.2-1-x86_64.pkg.tar.zst
+      - libxkbcommon-doc-1.9.2-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
