--- a/galaxy/waterfox/.artixlinux/pkgbase.yaml
+++ b/galaxy/waterfox/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: galaxy
-pkgbase:
-  name: waterfox
-  version: 6.5.7-2.1
-  arch:
-    - x86_64
-  pkgname:
-    - waterfox
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 6.5.7-2.1
+    version: 6.5.7-2.2
     packages:
-      - waterfox-6.5.7-2.1-x86_64.pkg.tar.zst
+      - waterfox-6.5.7-2.2-x86_64.pkg.tar.zst
+    debug: []
