--- a/galaxy/qgis/.artixlinux/pkgbase.yaml
+++ b/galaxy/qgis/.artixlinux/pkgbase.yaml
@@ -1,56 +1,60 @@
 ---
 team: galaxy
-pkgbase:
-  name: qgis
-  version: 3.42.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - qgis
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
-    version: 3.42.1-3
-    packages:
-      - qgis-3.42.1-3-x86_64.pkg.tar.zst
+    version: null
+    packages: []
+    debug: []
   galaxy:
-    version: 3.42.2-1
+    version: 3.42.2-1.1
     packages:
-      - qgis-3.42.2-1-x86_64.pkg.tar.zst
+      - qgis-3.42.2-1.1-x86_64.pkg.tar.zst
+    debug: []
