--- a/world/wxwidgets/PKGBUILD
+++ b/world/wxwidgets/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=(wxwidgets-common
          wxwidgets-gtk3
          wxwidgets-qt5)
 pkgver=3.2.8
-pkgrel=1
+pkgrel=2
 arch=(x86_64)
 url='https://wxwidgets.org'
 license=(custom:wxWindows)
@@ -80,7 +80,8 @@ package_wxwidgets-common() {
   replaces=(wxgtk-common)
 
   DESTDIR="$pkgdir" cmake --install build-gtk3
-  rm -r "$pkgdir"/usr/{bin/wx-config,lib/{cmake,wx,libwx_gtk*}}
+  DESTDIR="$pkgdir" cmake --install build-qt5
+  rm -r "$pkgdir"/usr/{bin/wx-config,lib/{cmake,wx,libwx_{gtk,qt}*}}
   install -Dm644 wxWidgets/wxwin.m4 -t "$pkgdir"/usr/share/aclocal
 
   install -Dm644 wxWidgets/docs/licence.txt "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
