--- a/system/sqlite/.artixlinux/pkgbase.yaml
+++ b/system/sqlite/.artixlinux/pkgbase.yaml
@@ -1,15 +1,4 @@
 ---
-pkgbase:
-  name: sqlite
-  version: 3.49.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - sqlite
-    - sqlite-tcl
-    - sqlite-analyzer
-    - lemon
-    - sqlite-doc
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -22,42 +11,54 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 3.49.1-1
+    version: 3.49.2-1
     packages:
-      - sqlite-3.49.1-1-x86_64.pkg.tar.zst
-      - sqlite-tcl-3.49.1-1-x86_64.pkg.tar.zst
-      - sqlite-analyzer-3.49.1-1-x86_64.pkg.tar.zst
-      - lemon-3.49.1-1-x86_64.pkg.tar.zst
-      - sqlite-doc-3.49.1-1-x86_64.pkg.tar.zst
+      - sqlite-3.49.2-1-x86_64.pkg.tar.zst
+      - sqlite-tcl-3.49.2-1-x86_64.pkg.tar.zst
+      - sqlite-analyzer-3.49.2-1-x86_64.pkg.tar.zst
+      - lemon-3.49.2-1-x86_64.pkg.tar.zst
+      - sqlite-doc-3.49.2-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
