--- a/world/breeze/.artixlinux/pkgbase.yaml
+++ b/world/breeze/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: breeze
-  version: 6.3.4-1
-  arch:
-    - x86_64
-  pkgname:
-    - breeze
-    - breeze5
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.3.4-1
+    version: 6.3.5-1
     packages:
-      - breeze-6.3.4-1-x86_64.pkg.tar.zst
-      - breeze5-6.3.4-1-x86_64.pkg.tar.zst
+      - breeze-6.3.5-1-x86_64.pkg.tar.zst
+      - breeze5-6.3.5-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
