--- a/world/dropbear/.artixlinux/pkgbase.yaml
+++ b/world/dropbear/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: dropbear
-  version: 2025.87-1
-  arch:
-    - x86_64
-  pkgname:
-    - dropbear
-    - dropbear-scp
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2025.87-1
+    version: 2025.88-1
     packages:
-      - dropbear-2025.87-1-x86_64.pkg.tar.zst
-      - dropbear-scp-2025.87-1-x86_64.pkg.tar.zst
+      - dropbear-2025.88-1-x86_64.pkg.tar.zst
+      - dropbear-scp-2025.88-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
