--- a/system/linux-firmware/.artixlinux/pkgbase.yaml
+++ b/system/linux-firmware/.artixlinux/pkgbase.yaml
@@ -1,20 +1,4 @@
 ---
-pkgbase:
-  name: linux-firmware
-  version: 20250408.c1a774f3-1
-  arch:
-    - any
-  pkgname:
-    - linux-firmware-whence
-    - linux-firmware
-    - amd-ucode
-    - linux-firmware-nfp
-    - linux-firmware-mellanox
-    - linux-firmware-marvell
-    - linux-firmware-qcom
-    - linux-firmware-liquidio
-    - linux-firmware-qlogic
-    - linux-firmware-bnx2x
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -27,47 +11,59 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 20250408.c1a774f3-1
+    version: 20250508.788aadc8-1
     packages:
-      - linux-firmware-whence-20250408.c1a774f3-1-any.pkg.tar.zst
-      - linux-firmware-20250408.c1a774f3-1-any.pkg.tar.zst
-      - amd-ucode-20250408.c1a774f3-1-any.pkg.tar.zst
-      - linux-firmware-nfp-20250408.c1a774f3-1-any.pkg.tar.zst
-      - linux-firmware-mellanox-20250408.c1a774f3-1-any.pkg.tar.zst
-      - linux-firmware-marvell-20250408.c1a774f3-1-any.pkg.tar.zst
-      - linux-firmware-qcom-20250408.c1a774f3-1-any.pkg.tar.zst
-      - linux-firmware-liquidio-20250408.c1a774f3-1-any.pkg.tar.zst
-      - linux-firmware-qlogic-20250408.c1a774f3-1-any.pkg.tar.zst
-      - linux-firmware-bnx2x-20250408.c1a774f3-1-any.pkg.tar.zst
+      - linux-firmware-whence-20250508.788aadc8-1-any.pkg.tar.zst
+      - linux-firmware-20250508.788aadc8-1-any.pkg.tar.zst
+      - amd-ucode-20250508.788aadc8-1-any.pkg.tar.zst
+      - linux-firmware-nfp-20250508.788aadc8-1-any.pkg.tar.zst
+      - linux-firmware-mellanox-20250508.788aadc8-1-any.pkg.tar.zst
+      - linux-firmware-marvell-20250508.788aadc8-1-any.pkg.tar.zst
+      - linux-firmware-qcom-20250508.788aadc8-1-any.pkg.tar.zst
+      - linux-firmware-liquidio-20250508.788aadc8-1-any.pkg.tar.zst
+      - linux-firmware-qlogic-20250508.788aadc8-1-any.pkg.tar.zst
+      - linux-firmware-bnx2x-20250508.788aadc8-1-any.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
