--- a/lib32/lib32-vulkan-validation-layers/.nvchecker.toml
+++ b/lib32/lib32-vulkan-validation-layers/.nvchecker.toml
@@ -1,6 +1,5 @@
 [lib32-vulkan-validation-layers]
-source = "github"
-github = "KhronosGroup/Vulkan-ValidationLayers"
-use_max_tag = true
+source = "git"
+git = "https://github.com/KhronosGroup/Vulkan-ValidationLayers.git"
 include_regex = 'vulkan-sdk-\d+(\.\d+)*'
 prefix = "vulkan-sdk-"
