--- a/world/ffmpeg/.artixlinux/pkgbase.yaml
+++ b/world/ffmpeg/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: ffmpeg
-  version: 2:7.1.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - ffmpeg
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2:7.1.1-1
+    version: 2:7.1.1-2
     packages:
-      - ffmpeg-2:7.1.1-1-x86_64.pkg.tar.zst
+      - ffmpeg-2:7.1.1-2-x86_64.pkg.tar.zst
+    debug:
+      - ffmpeg-debug-2:7.1.1-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
