--- a/world/gdal/.artixlinux/pkgbase.yaml
+++ b/world/gdal/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: gdal
-  version: 3.10.3-1
-  arch:
-    - x86_64
-  pkgname:
-    - gdal
-    - python-gdal
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.10.3-1
+    version: 3.10.3-3
     packages:
-      - gdal-3.10.3-1-x86_64.pkg.tar.zst
-      - python-gdal-3.10.3-1-x86_64.pkg.tar.zst
+      - gdal-3.10.3-3-x86_64.pkg.tar.zst
+      - python-gdal-3.10.3-3-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
