--- a/world/poppler/.artixlinux/pkgbase.yaml
+++ b/world/poppler/.artixlinux/pkgbase.yaml
@@ -1,14 +1,4 @@
 ---
-pkgbase:
-  name: poppler
-  version: 25.04.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - poppler
-    - poppler-glib
-    - poppler-qt5
-    - poppler-qt6
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -21,41 +11,53 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 25.04.0-1
+    version: 25.05.0-1
     packages:
-      - poppler-25.04.0-1-x86_64.pkg.tar.zst
-      - poppler-glib-25.04.0-1-x86_64.pkg.tar.zst
-      - poppler-qt5-25.04.0-1-x86_64.pkg.tar.zst
-      - poppler-qt6-25.04.0-1-x86_64.pkg.tar.zst
+      - poppler-25.05.0-1-x86_64.pkg.tar.zst
+      - poppler-glib-25.05.0-1-x86_64.pkg.tar.zst
+      - poppler-qt5-25.05.0-1-x86_64.pkg.tar.zst
+      - poppler-qt6-25.05.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
